--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
             max-width: 1200px;
             margin: 0 auto;
         }
-        background: white;
+        .card {
+            background: white;
             border-radius: 8px;
             box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-            width: 250px; /* Fijo para que no se expanda */
+            width: 250px;
             text-align: center;
             overflow: hidden;
             transition: transform 0.2s ease;
@@ -48,7 +49,7 @@
         .card img {
             width: 100%;
             height: auto;
-            max-height: 350px; /* Limita altura */
+            max-height: 350px;
             object-fit: cover;
             display: block;
         }
@@ -78,18 +79,17 @@
     </style>
 </head>
 <body>
-    <header>Revista Líquenes y Ecosistemas</header>
+    <header>Revista - Líquenes y Ecosistemas</header>
     <h2>Volúmenes publicados</h2>
     <div class="contenedor">
         <div class="card">
-            img/portada0.jpg
-            <h3>Líquenes y Ecosistemas 0 (2025)</h3>
-            <a href="volumenes/liquenes_y_ecosistemas PDF</a>
+            <img src="img/portada0.jpg       <h3>Líquenes y Ecosistemas 0 (2025)</h3>
+            <a href="volumenes/liquenes_y_ecosistemas_0.PDF</a>
         </div>
         <div class="card">
-            <img src="img/portada1.jpg" alt="Portenes y Ecosistemas 1 (2025)</h3>
+            <img src="img/portada1.jpg" alt="Líquenes y Ecosistemas 1 (2025)</h3>
             <a href="volumenes/liquenes_y_ecosistemas_1.pdf" target="_blank>
     </div>
-    <footer>&copy; 2025 Revista Líquenes y Ecosistemas</footer>
+    <footer>&copy; 2025 Revista - Líquenes y Ecosistemas</footer>
 </body>
 </html>
