--- a/index.html
+++ b/index.html
@@ -84,13 +84,14 @@
     <h2>Volúmenes publicados</h2>
     <div class="contenedor">
         <div class="card">
-            <img/portada0.jpg
+            <img scr="img/portada0.jpg"
             <h3>Líquenes y Ecosistemas 0 (2025)</h3>
-            <a href="volumenes/liquenes_y_ecosistemas_0.pdfVer PDF</a>
+            <a href="volumenes/liquenes_y_ecosistemas_0.pdf Ver PDF</a>
         </div>
         <div class="card">
-            <img src="img/portada1.jpg" alt3>Líquenes y Ecosistemas 1 (2025)</h3>
-            <a href="volumenes/liquenes_y_ecosistemas_1.pdfVer PDF</a>
+            <img src="img/portada1.jpg" 
+                <alt3>Líquenes y Ecosistemas 1 (2025)</h3>
+            <a href="volumenes/liquenes_y_ecosistemas_1.pdf Ver PDF</a>
         </div>
     </div>
     <footer>&copy; 2025 Revista Líquenes y Ecosistemas</footer>
