--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,16 +8,7 @@
     <title>Boletín divulgativo - Líquenes y Ecosistemas</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 20px;
-        }
-        h2 {
-            margin-bottom: 30px;
-        }
-        .volumen {
-            display: inline-block;
-            margin: 20px;
+            font            margin: 20px;
             text-align: center;
         }
         .volumen img {
@@ -29,17 +21,20 @@
             font-weight: bold;
             margin-top: 10px;
             display: block;
-       </head>
+        }
+    </style>
+</head>
 <body>
     <h2><strong>Boletín divulgativo - Líquenes y Ecosistemas</strong></h2>
 
     <div class="volumen">
-        volumenes/liquenesecosistemas00.pdf
-            <img src="img/portada0.jpg" alt="Port <span class="numero">Nº 00</span>
+        <a href="volumenes/liquenesecosistemas00        <img src="img/portada0.jpg" alt="Port <span class="numero">Nº 00</span>
     </div>
 
     <div class="volumen">
-        <a href="volumenes/liquenesecosistemas01.pdf" target src="img/portada1.jpg" alt="Port <span class="numero">Nº 01</span>
+        volumenes/liquenesecosistemas01.pdf
+            <img src="img/port       </a>
+        <span class="numero">Nº 01</span>
     </div>
 </body>
 </html>
