--- a/index.html
+++ b/index.html
@@ -42,11 +42,12 @@
 
     <div class="volumen">
         volumenes/liquenesecosistemas01.pdf
-            img/portada1.jpg
+            <img src="img/portada0.jpg" alt="Portada Volclass="numero">Nº 00</span>
         </a>
         <span class="numero">Nº 01</span>
 
     </div>
 </body>
 </html>
+
 
